--- a/DevopsClassFront/Dockerfile
+++ b/DevopsClassFront/Dockerfile
@@ -3,8 +3,9 @@ FROM httpd:latest
 COPY ./dist/ /usr/local/apache2/htdocs/
 
 #Install npm
+RUN apt install curl
 RUN curl -fsSL https://fnm.vercel.app/install | bash 
-RUN source ~/.bashrc
+RUN . ~/.bashrc
 RUN fnm use --install-if-missing 20
 
 # Add in the Contrast agent
