--- a/DevopsClassFront/Dockerfile
+++ b/DevopsClassFront/Dockerfile
@@ -3,7 +3,8 @@ FROM httpd:latest
 COPY ./dist/ /usr/local/apache2/htdocs/
 
 #Install npm
-RUN apt install curl
+RUN apt-get update
+RUN apt-get -y install curl
 RUN curl -fsSL https://fnm.vercel.app/install | bash 
 RUN . ~/.bashrc
 RUN fnm use --install-if-missing 20
