--- a/DevopsClassFront/Dockerfile
+++ b/DevopsClassFront/Dockerfile
@@ -4,7 +4,7 @@ COPY ./dist/ /usr/local/apache2/htdocs/
 
 #Install npm
 RUN apt-get update
-RUN apt-get -y install curl
+RUN apt-get -y install curl unzip
 RUN curl -fsSL https://fnm.vercel.app/install | bash 
 RUN . ~/.bashrc
 RUN fnm use --install-if-missing 20
