--- a/DevopsClassFront/Dockerfile
+++ b/DevopsClassFront/Dockerfile
@@ -1,16 +1,22 @@
-FROM httpd:latest
+# Use the official Node.js image as the base image
+FROM node:latest
 
-COPY ./dist/ /usr/local/apache2/htdocs/
+# Install Apache HTTP Server
+RUN apt-get update && \
+    apt-get install -y apache2 && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
-#Install npm
-RUN apt-get update
-RUN apt-get -y install curl unzip
-RUN curl -fsSL https://fnm.vercel.app/install | bash 
-RUN . ~/.bashrc
-RUN fnm use --install-if-missing 20
+# Copy your application files to the container
+# Assuming your application files are in the 'app' directory
+COPY ./dist /var/www/html
 
 # Add in the Contrast agent
 RUN npm install --production @contrast/agent
 
-# Change the startup command to preload Contrast agent
-CMD ["node", "-r", "@contrast/agent", "build/app"]
+# Expose port 80 to the outside world
+EXPOSE 80
+
+# Start Apache in the foreground and startup command to preload Contrast agent
+CMD ["apachectl", "-D", "FOREGROUND", "node", "-r", "@contrast/agent", "build/app"]
+
