--- a/DevopsClassFront/Dockerfile
+++ b/DevopsClassFront/Dockerfile
@@ -27,5 +27,5 @@ EXPOSE 80
 
 # Start Apache in the foreground and startup command to preload Contrast agent
 CMD ["apachectl", "-D", "FOREGROUND"]
-CMD ["node", "-r", "@contrast/agent", "build/app"]
+CMD ["node", "--import", "@contrast/agent", "app"]
 
